samples/_failures_safe/1761435949_3f2f1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05a40d75.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
